openshift/backend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guestbook-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: guestbook-backend
  template:
    metadata:
      labels:
        app: guestbook-backend
    spec:
      containers:
        - name: backend
          image: ghcr.io/macfatty/ocp-guestbook-orgi-backend:3473d736a8ec5b2cba760f5a2eb28b43838ded34
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: guestbook-backend
  ports:
    - name: http
      port: 8080
      targetPort: 8080
