openshift/frontend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ayuub-guestbook-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ayuub-guestbook-frontend
  template:
    metadata:
      labels:
        app: ayuub-guestbook-frontend
    spec:
      containers:
        - name: frontend
          image: ghcr.io/macfatty/ocp-guestbook-orgi-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: ayuub-guestbook-frontend
spec:
  selector:
    app: ayuub-guestbook-frontend
  ports:
    - name: http
      port: 8080
      targetPort: 8080
