openshift/route-guestbook-frontend.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: guestbook-frontend
spec:
  to:
    kind: Service
    name: guestbook-frontend
  port:
    targetPort: http
